# VisionCore

./: README.md
.github/workflows/: auto-assign.yml  backend-ci.yaml  backend-ci.yml
backend/: CMakeLists.txt
backend/src/: client.html  main.cpp
backend/src/core/: ImageSource.cpp  ImageSource.hpp  VideoFileSource.cpp  VideoFileSource.hpp  VideoSource.hpp  WebcamSource.cpp  WebcamSource.hpp
backend/src/filters/: GrayscaleFilter.cpp  GrayscaleFilter.hpp  IFilter.hpp  LUTFilter.cpp  LUTFilter.hpp  ResizeFilter.cpp  ResizeFilter.hpp
backend/src/network/: WSFrameServer.cpp  WSFrameServer.hpp
backend/src/pipeline/: FramePipeline.cpp  FramePipeline.hpp  PipelineError.hpp
backend/src/processing/: FrameController.cpp  FrameController.hpp  FrameEncoder.cpp  FrameEncoder.hpp
backend/src/utils/: Logger.hpp
backend/tests/: CMakeLists.txt  test_filters.cpp  test_framecontroller.cpp  test_framecontroller_stop.cpp  test_logger.cpp  test_pipeline.cpp  test_sources.cpp
docs/: architecture.md  nextroadmap.md  roadmap.md  sources.md
